# Algencan-c-cpp-cmake

./: README.md
cmake/: CMakeLists.txt
cmake/modules/: FindALGENCAN.cmake
cpp/: algencanpp
